# SuperLinux

./: .gitignore  =4.41.0  README.md  ai-evolution.service  config.example.yaml  pyproject.toml  requirements.txt  start_agent.py  test_claude.py  test_claude_openai.py  test_deepseek.py  test_llm.py  自我进化AI系统-项目计划书.md
agent_workspace/: ADVANCED_EVOLUTION.md  EVOLUTION_SUMMARY.md  FINAL_REFACTORING_SUMMARY.md  IMPROVEMENT_PLAN.md  README_EVOLUTION.md  REFACTORING_PROGRESS.md  REFACTORING_REPORT.md  auto_fixer.py  check_improvements.py  cli.py  demo_evolution.py  demo_simple.py  experience_config.py  experience_rag.py  final_improvement_report.json  multi_agent.py  multi_agent_config.py  prompts.py  self_diagnosis.py  self_evolution.py  self_improvement_report.md  test_advanced_evolution.py  test_analyzer.py  test_evolution_complete.py  test_imports.py  tool_call_processor.py  tools.py  tools_refactor_compatible.py  web_app.py  web_ui_manager.py
conversations/: conversation_20260117_165710.json  conversation_20260117_165953.json  conversation_20260117_171559.json  conversation_20260117_172509.json  conversation_20260117_172827.json  conversation_20260117_174101.json  conversation_20260117_175710.json  conversation_20260117_181111.json  conversation_20260117_183801.json
docs/: PHASE1_SELF_AWARENESS.md  PHASE2_PLAN.md  QUICKSTART_SELF_AWARENESS.md
examples/: self_awareness_demo.py  simple_self_awareness.py
experience_db/: chroma.sqlite3  command_patterns.json  environment_profile.json  evolution_log.json  experiences.json  meta_experiences.json  prompt_corrections.json  suggestions.json
src/: __init__.py  agent.py  code_auditor.py  code_pattern_analyzer.py  consultant_manager.py  continuous_quality_check.py  experience_rag.py  final_report_generator.py  multi_agent.py  prompts.py  self_diagnosis.py  self_evolution.py  simple_agent.py  tools.py  tools_refactor.py  web_app.py
(+58 files in other folders)
